syntax = "proto3";

package Shop.Application.DTOs.WalletTransaction;

message Fecilities {
    int32 wallet_id = 1;
    double price = 2;
    google.protobuf.Timestamp start_time = 3;
    int32 sud = 4;
    int32 ghest_count = 5;
    double ghest = 6;
    double total_price = 7;
    int32 karmozd_persent = 8;
    double karmozd = 9;
    string serial = 10;
    string type = 11;
    string order_code = 12;
    int32? parent_fecilities_id = 13;
}
